issue detail and set fp api endpoints
