# docs/swagger.yaml
@@ -26,6 +26,13 @@ definitions:
       url:
         type: string
     type: object
+  api.IssueUpdateResponse:
+    properties:
+      issue:
+        $ref: '#/definitions/db.Issue'
+      message:
+        type: string
+    type: object
   api.PassiveScanInput:
     properties:
       items:
@@ -131,6 +138,63 @@ definitions:
       title:
         type: string
     type: object
+  db.History:
+    properties:
+      created_at:
+        type: string
+      depth:
+        type: integer
+      evaluated:
+        type: boolean
+      id:
+        type: integer
+      json_web_tokens:
+        items:
+          $ref: '#/definitions/db.JsonWebToken'
+        type: array
+      method:
+        type: string
+      note:
+        type: string
+      parameters_count:
+        type: integer
+      raw_request:
+        items:
+          type: integer
+        type: array
+      raw_response:
+        items:
+          type: integer
+        type: array
+      request_body:
+        items:
+          type: integer
+        type: array
+      request_body_size:
+        type: integer
+      request_content_length:
+        type: integer
+      request_content_type:
+        type: string
+      response_body:
+        items:
+          type: integer
+        type: array
+      response_body_size:
+        type: integer
+      response_content_type:
+        type: string
+      source:
+        type: string
+      status_code:
+        type: integer
+      updated_at:
+        type: string
+      url:
+        type: string
+      workspace_id:
+        type: integer
+    type: object
   db.Issue:
     properties:
       code:
@@ -153,6 +217,10 @@ definitions:
         type: string
       id:
         type: integer
+      interactions:
+        items:
+          $ref: '#/definitions/db.OOBInteraction'
+        type: array
       note:
         type: string
       payload:
@@ -167,6 +235,10 @@ definitions:
         items:
           type: integer
         type: array
+      requests:
+        items:
+          $ref: '#/definitions/db.History'
+        type: array
       response:
         items:
           type: integer
@@ -180,6 +252,37 @@ definitions:
       updated_at:
         type: string
       url:
+        type: string
+      workspace_id:
+        type: integer
+    type: object
+  db.JsonWebToken:
+    properties:
+      algorithm:
+        type: string
+      audience:
+        type: string
+      created_at:
+        type: string
+      expiration:
+        type: string
+      histories:
+        items:
+          $ref: '#/definitions/db.History'
+        type: array
+      id:
+        type: integer
+      issued_at:
+        type: string
+      issuer:
+        type: string
+      signature:
+        type: string
+      subject:
+        type: string
+      token:
+        type: string
+      updated_at:
         type: string
       workspace_id:
         type: integer
@@ -234,6 +337,37 @@ definitions:
     x-enum-varnames:
     - MessageSent
     - MessageReceived
+  db.OOBInteraction:
+    properties:
+      created_at:
+        type: string
+      full_id:
+        type: string
+      id:
+        type: integer
+      issue_id:
+        type: integer
+      oob_test_id:
+        type: integer
+      protocol:
+        type: string
+      qtype:
+        type: string
+      raw_request:
+        type: string
+      raw_response:
+        type: string
+      remote_address:
+        type: string
+      timestamp:
+        type: string
+      unique_id:
+        type: string
+      updated_at:
+        type: string
+      workspace_id:
+        type: integer
+    type: object
   db.Task:
     properties:
       created_at:
@@ -700,6 +834,82 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: List all issues
+      tags:
+      - Issues
+  /api/v1/issues/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Retrieves details of a specific issue by its ID
+      parameters:
+      - description: Issue ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/db.Issue'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Get details of an issue
+      tags:
+      - Issues
+  /api/v1/issues/{id}/set-false-positive:
+    post:
+      consumes:
+      - application/json
+      description: Updates the FalsePositive attribute of a specific issue
+      parameters:
+      - description: Issue ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: Boolean value for FalsePositive
+        in: body
+        name: value
+        required: true
+        schema:
+          type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.IssueUpdateResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Set an issue as a false positive
       tags:
       - Issues
   /api/v1/issues/grouped:
